ESMValTool/esmvaltool/recipes/hydrology/esmvaltool_output/recipe_HBVmountain_20220530_085731/run/diagnostic_daily/script/log.txt
  File "/home/vhoogeland/ESMValTool/esmvaltool/diag_scripts/hydrology/HBVmountain.py", line 123
    )
    ^
SyntaxError: unmatched ')'
